--- a/arduino_server/package.json
+++ b/arduino_server/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.10.0",
     "serialport": "^1.4.6",
-    "socket.io": "^1.1.0",
-    "socket.io-client": "^1.1.0",
-    "websocket": "^1.0.10"
+    "socket.io-client": "^1.1.0"
   },
   "devDependencies": {},
   "scripts": {
