--- a/app.json
+++ b/app.json
@@ -2,5 +2,6 @@
   "name": "projet-captation",
   "description": "A three.js environment affected by real life events via Arduino",
   "repository": "https://github.com/th3m4ri0/projet-captation",
+  "logo": "https://raw.githubusercontent.com/th3m4ri0/projet-captation/master/images/logo.png",
   "keywords": ["node", "express", "captation", "arduino", "leonardo", "uqam", "serial", "three.js"]
 }
