--- a/arduino_server/package.json
+++ b/arduino_server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "optimist": "^0.6.1",
     "prompt": "^0.2.14",
     "serialport": "^1.4.6",
     "socket.io-client": "^1.1.0"
